core value 動畫製作

--- a/about.html
+++ b/about.html
@@ -41,9 +41,6 @@
             </div>
             <div class="about-sec3-graphics">
                 <div class="about-sec3-graphics-center">
-                    <div class="about-sec3-graphics-center-circleCenter">
-                        <span>Core<br/>Values</span>
-                    </div>
                     <div class="about-sec3-graphics-center-heading">
                         <h4 style="color: #305683;">Innovation</h4>
                         <p>We continuously embrace cutting-edge technologies, forward thinking solutions and processes that are relevant and of genuine value to our customers.</p>
@@ -56,22 +53,37 @@
                         <h4 style="color: #92a9c9;">Customer Focus</h4>
                         <p>We aspire to bring the most professional and responsible level of service together with user-friendly designs as our long lasting commitment to delight our customers.</p>
                     </div>
-                </div>
-                <div class="about-sec3-graphics-center">
-                    <div class="about-sec3-graphics-center-circle" style="background-color: #305683;">
-                        <span>Innovation</span>
+                    <div id="core-values" class="about-sec3-graphics-center-position">
+                        <div class="about-sec3-graphics-center-position-circle">
+                            <span>Core<br>Values</span>
+                        </div>
+                    </div>
+                    <div id="innovation" class="about-sec3-graphics-center-position">
+                        <div class="about-sec3-graphics-center-position-circle">
+                            <span>Innovation</span>
+                        </div>
+                    </div>
+                    <div id="reliability" class="about-sec3-graphics-center-position">
+                        <div class="about-sec3-graphics-center-position-circle">
+                            <span>Reliability</span>
+                        </div>
+                    </div>
+                    <div id="customer-focus" class="about-sec3-graphics-center-position">
+                        <div class="about-sec3-graphics-center-position-circle">
+                            <span>Customer<br>Focus</span>
+                        </div>
+                    </div>
+                    <div id="circle-line" class="about-sec3-graphics-center-position">
+                        <div class="about-sec3-graphics-center-position-circle">
+                            <span></span>
+                        </div>
                     </div>
                 </div>
-                <div class="about-sec3-graphics-center">
-                    <div class="about-sec3-graphics-center-circle" style="background-color: #5e6d84;">
-                        <span>Reliability</span>
-                    </div>
-                </div>
-                <div class="about-sec3-graphics-center">
-                    <div class="about-sec3-graphics-center-circle" style="background-color: #92a9c9;">
-                        <span>Customer<br/>focus</span> 
-                    </div>
-                </div>
+                <!-- #71c5e9 Core Values-->
+                <!-- #305683 Innovation  We continuously embrace cutting-edge technologies, forward thinking solutions and processes that are relevant and of genuine value to our customers.-->
+                <!-- #5e6d84 Reliability  We advocate reliability from product conception, intuitive designs to state-of-the-art manufacturing, while delivering trustworthy and dependable industry leading expertise and services.light our customers.-->
+                <!-- #92a9c9 Customer Focus  We aspire to bring the most professional and responsible level of service together with user-friendly designs as our long lasting commitment to delight our customers.-->
+                <!---->
             </div>
         </section>
         <section class="about-sec4">
