--- a/detail.html
+++ b/detail.html
@@ -2,7 +2,7 @@
     <section class="detail-banner">
         <div class="detail-banner-container">
             <!--輸出圖片在 background-image-->
-                <div class="detail-banner-container" style="background-image: url(./images/innovation/innovation-img1.png)"></div>
+                <div class="detail-banner-container" style="background-image: url(./images/detail/detail-banner.jpg)"></div>
             </div>
         </div>
     </section>
