--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
                 </div>
             </div>
         </section>
-        <section class="home-sec2" style="background-image: url(./images/home/sec2-bg.png);">
+        <section class="home-sec2" style="background-image: url(./images/home/sec2-bg.jpg);">
             <div class="home-sec2-container">
                 <div class="home-sec2-container-display">
                     <h2>About Optoma</h2>
@@ -21,7 +21,7 @@
                     <button><a href="./index.php?page=about" title="go to about optoma page">Find Out More</a></button>
                 </div>
             </div>
-            <div class="home-sec2-bg" style="background-image: url(./images/home/sec2-bg.png);"></div>
+            <div class="home-sec2-bg" style="background-image: url(./images/home/sec2-bg.jpg);"></div>
         </section>
         <section class="home-sec3">
             <div class="home-sec3-container">
