--- a/home.html
+++ b/home.html
@@ -39,9 +39,9 @@
                 </div>
             </div>
         </section>
-        <section class="home-sec4">
-            <div class="home-sec4-bgUpper" style="background-image: url(./images/home/sec4-bg.png);"></div>
-            <div class="home-sec4-bgLower" style="background-image: url(./images/home/sec4-fe.png);"></div>
+        <section class="home-sec4" style="background-image: url(./images/home/sec4-bg.jpg);">
+            <!-- <div class="home-sec4-bgUpper" style="background-image: url(./images/home/sec4-bg.png);"></div>
+            <div class="home-sec4-bgLower" style="background-image: url(./images/home/sec4-fe.png);"></div> -->
             <div class="home-sec4-container">
                 <div class="home-sec4-container-display">
                     <h2>
