輪播自動撥放

--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-        <section class="about-sec1" style="background-image: url(./images/about/about-sec1.png)">
+        <section class="about-sec1" style="background-image: url(./images/about/about-sec1.jpg)">
             <div class="about-sec1-container">
                 <div class="about-sec1-container-display">
                     <h2>About Optoma</h2>
@@ -20,7 +20,7 @@
                             </div>
                         </div>
                         <div class="about-sec2-container-display-row-figure">
-                            <figure style="background-image: url(./images/about/about-sec2.png);"></figure>
+                            <figure style="background-image: url(./images/about/about-sec2.jpg);"></figure>
                         </div>
                     </div>
                 </div>
@@ -96,7 +96,7 @@
                 </div>
             </div>
         </section>
-        <section class="about-sec5" style="background-image: url(./images/about/about-sec5.png);">
+        <section class="about-sec5" style="background-image: url(./images/about/about-sec5.jpg);">
             <div class="about-sec5-container">
                 <div class="about-sec5-container-display">
                     <h2>Corporate Overview</h2>
@@ -137,31 +137,31 @@
                 <div class="about-sec6-container-row">
                     <div class="about-sec6-container-row-col">
                         <figure>
-                            <div class="img" style="background-image: url(./images/about/about-sec6-img1.png);"></div>
+                            <div class="img" style="background-image: url(./images/about/about-sec6-img1.jpg);"></div>
                             <figcaption>ProAV</figcaption>
                         </figure>
                     </div>
                     <div class="about-sec6-container-row-col">
                         <figure>
-                            <div class="img" style="background-image: url(./images/about/about-sec6-img2.png);"></div>
+                            <div class="img" style="background-image: url(./images/about/about-sec6-img2.jpg);"></div>
                             <figcaption>Commercial</figcaption>
                         </figure>
                     </div>
                     <div class="about-sec6-container-row-col">
                         <figure>
-                            <div class="img" style="background-image: url(./images/about/about-sec6-img3.png);"></div>
+                            <div class="img" style="background-image: url(./images/about/about-sec6-img3.jpg);"></div>
                             <figcaption>Home</figcaption>
                         </figure>
                     </div>
                     <div class="about-sec6-container-row-col">
                         <figure>
-                            <div class="img" style="background-image: url(./images/about/about-sec6-img4.png);"></div>
+                            <div class="img" style="background-image: url(./images/about/about-sec6-img4.jpg);"></div>
                             <figcaption>LED display</figcaption>
                         </figure>
                     </div>
                     <div class="about-sec6-container-row-col">
                         <figure>
-                            <div class="img" style="background-image: url(./images/about/about-sec6-img5.png);"></div>
+                            <div class="img" style="background-image: url(./images/about/about-sec6-img5.jpg);"></div>
                             <figcaption>Portable</figcaption>
                         </figure>
                     </div>
