--- a/applications.html
+++ b/applications.html
@@ -1,6 +1,6 @@
 <section class="applications-carousel">
-    <div id="banner-applications">
-        <div class="silck-item">
+    <div id="banner-applications" class="silck-banner">
+        <!-- <div class="silck-item">
             <figure>
                 <img src="" alt="">
             </figure>
@@ -8,7 +8,7 @@
                 <h2>Applications</h2>
                 <h3>Delivering comprehensive bing image solutions that enhance communication and reinforce collaboration.</h3>
             </div>
-        </div>
+        </div> -->
     </div>   
 </section>
 <div id="applications">
