--- a/ourBraud.html
+++ b/ourBraud.html
@@ -1,5 +1,5 @@
 <section class="ourbraud">
-    <div id="banner-ourbraud">
+    <div id="banner-ourbraud" class="silck-banner">
         <div class="silck-item">
             <figure>
                 <img src="" alt="">
