--- a/design.html
+++ b/design.html
@@ -1,5 +1,5 @@
 <section class="innovation-carousel">
-    <div id="banner-design">
+    <div id="banner-design" class="silck-banner">
         <!-- <div class="silck-item">
             <figure>
                 <img src="" alt="">
