--- a/innovation.html
+++ b/innovation.html
@@ -1,5 +1,5 @@
 <section class="innovation-carousel">
-    <div id="banner-innovation">
+    <div id="banner-innovation" class="silck-banner">
         <!-- <div class="silck-item">
             <figure>
                 <img src="" alt="">
