--- a/applications.html
+++ b/applications.html
@@ -11,6 +11,10 @@
         </div> -->
     </div>   
 </section>
+<div class="gotop">
+    <button class="gotop-button">
+    </button>
+</div>
 <div id="applications">
     <nav>
         <ul id="navbar-applications">
