--- a/home.html
+++ b/home.html
@@ -18,7 +18,10 @@
                         We deliver engagaging visual and audio<br>
                         experiences for a connected world.
                     </h3>
-                    <button><a href="./index.php?page=about" title="go to about optoma page">Find Out More</a></button>
+                    <div class="home-sec2-container-display-button">
+                        <button><a href="./index.php?page=about" title="go to about optoma page">Find Out More</a></button>
+                        <img src="./images/home/sec2-logo.svg" alt="logo">
+                    </div>
                 </div>
             </div>
             <div class="home-sec2-bg" style="background-image: url(./images/home/sec2-bg.jpg);"></div>
@@ -28,14 +31,14 @@
                 <h2>Applications</h2>
                 <button type="button" class="home-sec3-container-button"><a href="./index.php?page=applications">Find Out More</a></button>
                 <div id="silck-applications">
-                    <div class="silck-item">
+                    <!-- <div class="silck-item">
                         <figure>
                             <img>
                         </figure>
                         <h3>
                             <a>${silck.applications.heading}</a>
                         </h3>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
