--- a/applications.html
+++ b/applications.html
@@ -153,7 +153,7 @@
             <div class="applications-container-sec-row">
                 <div class="applications-container-sec-row-col">
                     <figure>
-                        <img src="./images/application/HouseWorship.png" alt="">
+                        <img src="./images/application/HouseWorship.jpg" alt="">
                     </figure>
                 </div>
             </div>
@@ -180,7 +180,7 @@
             <div class="applications-container-sec-row">
                 <div class="applications-container-sec-row-col">
                     <figure>
-                        <img src="./images/application/Retail-1.png" alt="">
+                        <img src="./images/application/Retail-1.jpg" alt="">
                     </figure>
                 </div>
                 <div class="applications-container-sec-row-col">
@@ -271,7 +271,7 @@
             <div class="applications-container-sec-row">
                 <div class="applications-container-sec-row-col">
                     <figure>
-                        <img src="./images/application/Medical.png" alt="">
+                        <img src="./images/application/Medical.jpg" alt="">
                     </figure>
                 </div>
             </div>
