--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
                 <div class="about-sec5-container-display">
                     <h2>Corporate Overview</h2>
                     <p>Optoma is a leading brand in projection solutions and consumer audio markets serving partners and customers across 159 countries worldwide.</p>
-                    <small>*PMA Research 2019 1H Report</small>
+                    <small>*PMA Research 2019Y Report</small>
                 </div>
                 <div class="about-sec5-container-row">
                     <div class="about-sec5-container-row-col">
@@ -110,7 +110,7 @@
                         <div class="about-sec5-container-row-col-text">Serviced Countries</div>
                     </div>
                     <div class="about-sec5-container-row-col">
-                        <div class="about-sec5-container-row-col-number"><span id="centers-worldwide">204</span>+</div>
+                        <div class="about-sec5-container-row-col-number"><span id="centers-worldwide">208</span>+</div>
                         <div class="about-sec5-container-row-col-line"></div>
                         <div class="about-sec5-container-row-col-text">Service Centers Worldwide</div>
                     </div>
@@ -120,7 +120,7 @@
                         <div class="about-sec5-container-row-col-text">*4K UHD Brand Worldwide</div>
                     </div>
                     <div class="about-sec5-container-row-col">
-                        <div class="about-sec5-container-row-col-number">#<span id="home-segment">3</span></div>
+                        <div class="about-sec5-container-row-col-number">#<span id="home-segment">2</span></div>
                         <div class="about-sec5-container-row-col-line"></div>
                         <div class="about-sec5-container-row-col-text">*Home Segment Brand Worldwide</div>
                     </div>
