--- a/about.html
+++ b/about.html
@@ -12,11 +12,11 @@
                         <div class="about-sec2-container-display-row-text">
                             <div class="about-sec2-container-display-row-text-heading">
                                 <h3>Vision</h3>
-                                <p>To deliver engaging visual and audio experiences for a connected world</p>
+                                <p>To deliver engaging visual and audio experiences for a connected world.</p>
                             </div>
                             <div class="about-sec2-container-display-row-text-heading">
                                 <h3>Mission</h3>
-                                <p>To be the trusted provider of reliable and innovative audio and visual solutions for customers and partners worldwide</p>
+                                <p>To be the trusted provider of reliable and innovative audio and visual solutions for customers and partners worldwide.</p>
                             </div>
                         </div>
                         <div class="about-sec2-container-display-row-figure">
@@ -34,11 +34,11 @@
                         <p>We continuously embrace cutting-edge technologies, forward thinking solutions and processes that are relevant and of genuine value to our customers.</p>
                     </div>
                     <div class="about-sec3-graphics-center-heading">
-                        <h4 style="color: #5e6d84;">Reliability</h4>
+                        <h4 style="color: #305683;">Reliability</h4>
                         <p>We advocate reliability from product conception, intuitive designs to state-of-the-art manufacturing, while delivering trustworthy and dependable industry leading expertise and services.light our customers.</p>
                     </div>
                     <div class="about-sec3-graphics-center-heading">
-                        <h4 style="color: #92a9c9;">Customer Focus</h4>
+                        <h4 style="color: #305683;">Customer Focus</h4>
                         <p>We aspire to bring the most professional and responsible level of service together with user-friendly designs as our long lasting commitment to delight our customers.</p>
                     </div>
                     <div id="core-values" class="about-sec3-graphics-center-position">
@@ -78,11 +78,11 @@
                 <p>We continuously embrace cutting-edge technologies, forward thinking solutions and processes that are relevant and of genuine value to our customers.</p>
             </div>
             <div class="about-sec3-text">
-                <h4 style="color: #5e6d84;">Reliability</h4>
+                <h4 style="color: #305683;">Reliability</h4>
                 <p>We advocate reliability from product conception, intuitive designs to state-of-the-art manufacturing, while delivering trustworthy and dependable industry leading expertise and services.light our customers.</p>
             </div>
             <div class="about-sec3-text">
-                <h4 style="color: #92a9c9;">Customer Focus</h4>
+                <h4 style="color: #305683;">Customer Focus</h4>
                 <p>We aspire to bring the most professional and responsible level of service together with user-friendly designs as our long lasting commitment to delight our customers.</p>
             </div>
         </section>
@@ -90,7 +90,7 @@
             <div class="about-sec4-container">
                 <div class="about-sec4-container-display">
                     <h2>History</h2>
-                    <p>The Optoma brand had its origins as early as 1992 under the Coretronic Group. Regional headquarters were established in the Americas and Europe in 1995 and 1997 respectively leading up to Optoma Corporation becoming globally established in 2002. </p>
+                    <p>The Optoma brand had its origins as early as 1992 under the Coretronic Group. Regional headquarters were established in the Americas and Europe in 1995 and 1997 respectively leading up to Optoma Corporation. The Optoma brand was born in 2000 and Optoma became globally established in 2002.</p>
                     <p>Making strides in visual display technologies, Optoma launched itself onto the international stage in 2002 by announcing the world’s first 65-inch DLP® projection television and winning the CES Innovations Award.</p>
                     <p>In 2014, Optoma acquired NuForce, a Hi-End audio company based in Milpitas, California. Audio is essential for a truly immersive entertainment experience. Optoma mastered the technique to provide end users with an exciting audio-visual entertainment experience and has been continually innovating new experiences for Home Cinema with supreme sound quality.</p>
                 </div>
