--- a/applications.html
+++ b/applications.html
@@ -38,7 +38,7 @@
         <section id="sec1" class="applications-container-sec">
             <div class="applications-container-sec-heading">
                 <div class="applications-container-sec-heading-banner">
-                    <figure><img src="./images/application/Home-0.png" alt=""></figure>
+                    <figure><img src="./images/application/home-0.jpeg" alt=""></figure>
                     <p style="background-color: #1b212d;">
                         <span>The ultimate larger-than-life cinematic experience right at home. </span>
                     </p>
@@ -73,7 +73,7 @@
         <section id="sec2" class="applications-container-sec">
             <div class="applications-container-sec-heading">
                 <div class="applications-container-sec-heading-banner">
-                    <figure><img src="./images/application/Entertainment-0.png" alt=""></figure>
+                    <figure><img src="./images/application/Entertainment-0.jpg" alt=""></figure>
                     <p style="background-color: #60848b;">
                         <span>Create experiences that inspire, impress, inform and delight.</span>
                     </p>
@@ -87,15 +87,15 @@
             <div class="applications-container-sec-row">
                 <div class="applications-container-sec-row-col">
                     <figure>
-                        <img src="./images/application/Entertainment-1.png" alt="">
+                        <img src="./images/application/Entertainment-1.jpg" alt="">
                     </figure>
-                    <p style="background-color: #60848b;">
+                    <p style="background-color: #220b41;">
                         <span>Create experiences that inspire, impress, inform and delight.</span>
                     </p>
                 </div>
                 <div class="applications-container-sec-row-col">
                     <figure class="applications-container-sec-row-col-figure">
-                        <img src="./images/application/Entertainment-2.png" alt="">
+                        <img src="./images/application/Entertainment-2.jpg" alt="">
                     </figure>
                 </div>
             </div>
@@ -108,7 +108,7 @@
         <section id="sec3" class="applications-container-sec">
             <div class="applications-container-sec-heading">
                 <div class="applications-container-sec-heading-banner">
-                    <figure><img src="./images/application/Education&Training-0.png" alt=""></figure>
+                    <figure><img src="./images/application/Education-0.jpg" alt=""></figure>
                 </div>
                 <h3>Education & Training</h3>
                 <p>A more engaging and interactive way to learn and collaborate.
@@ -142,7 +142,7 @@
         <section id="sec4" class="applications-container-sec">
             <div class="applications-container-sec-heading">
                 <div class="applications-container-sec-heading-banner">
-                    <figure><img src="./images/application/HouseWorship-0.png" alt=""></figure>
+                    <figure><img src="./images/application/Worship-0.jpg" alt=""></figure>
                 </div>
                 <h3>House of Worship</h3>
                 <p>Shine a light on any sermon with Optoma’s bright and flexible projectors.
@@ -166,7 +166,7 @@
         <section id="sec5" class="applications-container-sec">
             <div class="applications-container-sec-heading">
                 <div class="applications-container-sec-heading-banner">
-                    <figure><img src="./images/application/Retail-0.png" alt=""></figure>
+                    <figure><img src="./images/application/Retail-0.jpg" alt=""></figure>
                     <p style="background-color: #1b212d;">
                         <span> In today’s shopping landscape, every aspect of the retail experience plays a significant role in capturing the customers’ attention. </span>
                     </p>
@@ -201,7 +201,7 @@
         <section id="sec6" class="applications-container-sec">
             <div class="applications-container-sec-heading">
                 <div class="applications-container-sec-heading-banner">
-                    <figure><img src="./images/application/Corporate-0.png" alt=""></figure>
+                    <figure><img src="./images/application/Corporate-0.jpg" alt=""></figure>
                 </div>
                 <h3>Corporate</h3>
                 <p>
@@ -231,7 +231,7 @@
         <section id="sec7" class="applications-container-sec">
             <div class="applications-container-sec-heading">
                 <div class="applications-container-sec-heading-banner">
-                    <figure><img src="./images/application/Portable-0.png" alt=""></figure>
+                    <figure><img src="./images/application/Portable-0.jpg" alt=""></figure>
                 </div>
                 <h3>Portable</h3>
                 <p>
@@ -258,11 +258,11 @@
         <section id="sec8" class="applications-container-sec">
             <div class="applications-container-sec-heading">
                 <div class="applications-container-sec-heading-banner">
-                    <figure><img src="./images/application/Medical-0.png" alt=""></figure>
+                    <figure><img src="./images/application/Medical-0.jpg" alt=""></figure>
                 </div>
                 <h3>Medical</h3>
                 <p>
-                    Share, discuss, and learn with Optoma’s DICOM Simulation Mode
+                    Share, discuss, and learn with Optoma’s DICOM Simulation Mode.
                     <br/>
                     <br/>Optoma provides reliable, standards-compliant imagery conforming to DICOM. DICOM (Digital Imaging and Communication in Medicine) is an ISO standard for handling, storing, printing and transmitting medical imaging information. The standard ensures that images are ‘the same’ in grey scale wherever they are produced. This in turn ensures subtle differences can be seen in an X-ray that might otherwise be missed.
                     <br/>The Optoma enhanced grey scale DICOM Simulation Mode is ideal for viewing and sharing medical images in non-diagnostic discussions or education environments. 
@@ -284,7 +284,7 @@
         <section id="sec9" class="applications-container-sec">
             <div class="applications-container-sec-heading">
                 <div class="applications-container-sec-heading-banner">
-                    <figure><img src="./images/application/Museums-0.png" alt=""></figure>
+                    <figure><img src="./images/application/Museums-0.jpg" alt=""></figure>
                 </div>
                 <h3>Museums</h3>
                 <p>
@@ -292,8 +292,7 @@
                     <br/>
                     <br/>Optoma’s innovative and intuitive visual technologies help give artifacts context, making them shine on the center stage. It enables visitors to see how they were used historically (and in some cases even interact with them). Optoma helps enrich the visitor’s experience in discovering science, nature and history. 
                     <br/>
-                    <br/>Optoma’s customizable visual solution is ideal for museums and heritage centers where downtime for maintenance is limited. We offer an extensive portfolio of 
-                    <br/>professional, robustly engineered and reliable projectors suited for long cycles of operation. This effectively reduces the cost of operation and ownership.
+                    <br/>Optoma’s customizable visual solution is ideal for museums and heritage centers where downtime for maintenance is limited. We offer an extensive portfolio of professional, robustly engineered and reliable projectors suited for long cycles of operation. This effectively reduces the cost of operation and ownership.
                 </p>
             </div>
             <div class="applications-container-sec-row">
@@ -314,7 +313,7 @@
         <section id="sec10" class="applications-container-sec">
             <div class="applications-container-sec-heading">
                 <div class="applications-container-sec-heading-banner">
-                    <figure><img src="./images/application/Gaming-0.png" alt=""></figure>
+                    <figure><img src="./images/application/Gaming-0.jpg" alt=""></figure>
                     <p style="background-color: #1b212d;">
                         <span>Enjoy gaming on a grander scale, with less latency and more wins.</span>
                     </p>
@@ -349,7 +348,7 @@
         <section id="sec11" class="applications-container-sec">
             <div class="applications-container-sec-heading">
                 <div class="applications-container-sec-heading-banner">
-                    <figure><img src="./images/application/PublicSectors-0.png" alt=""></figure>
+                    <figure><img src="./images/application/Public-Sectors-0.jpg" alt=""></figure>
                 </div>
                 <h3>Public Sectors</h3>
                 <p>
@@ -378,7 +377,7 @@
         <section id="sec12" class="applications-container-sec">
             <div class="applications-container-sec-heading">
                 <div class="applications-container-sec-heading-banner">
-                    <figure><img src="./images/application/Simulation-0.png" alt=""></figure>
+                    <figure><img src="./images/application/Simulation-0.jpg" alt=""></figure>
                 </div>
                 <h3>Simulation</h3>
                 <p>
