--- a/home.html
+++ b/home.html
@@ -15,8 +15,7 @@
                 <div class="home-sec2-container-display">
                     <h2>About Optoma</h2>
                     <h3>
-                        We deliver engagaging visual and audio<br>
-                        experiences for a connected world.
+                        We deliver engagaging visual and audio experiences for a connected world.
                     </h3>
                     <div class="home-sec2-container-display-button">
                         <button><a href="./index.php?page=about" title="go to about optoma page">Find Out More</a></button>
