--- a/ourBraud.html
+++ b/ourBraud.html
@@ -23,8 +23,7 @@
             <br/>
             <br/>Aspiring to deliver the biggest and most engaging display possible, Optoma was a pioneer in assembling a team of dedicated DLP® projection color specialists; experts on the forefront of bringing the most vivid and accurate color reproduction to life. As demand grew, so did Optoma; extending its reach to over 150 countries worldwide, truly realizing and establishing a global presence.
             <br/>
-            <br/>As a true innovator in developing advanced lamp, laser and LED projection solutions, Optoma’s full range of big image solutions embody the relentless pursuit to 
-            <br/>provide the most immersive cinematic experience. Along with the integration of critically acclaimed audio brand Nuforce, Optoma’s audio range offers high-fidelity sound for exceptional listening experiences.
+            <br/>As a true innovator in developing advanced lamp, laser and LED projection solutions, Optoma’s full range of big image solutions embody the relentless pursuit to provide the most immersive cinematic experience. Along with the integration of critically acclaimed audio brand Nuforce, Optoma’s audio range offers high-fidelity sound for exceptional listening experiences.
             <br/>
             <br/>Today, Optoma is a world leading provider of professional large display solutions for home, corporate, education, and installation markets. 
             <br/>Guided by a simple vision: “To deliver engaging visual and audio experiences for a connected world,” a vision that resonates with Optoma’s core values. 
