--- a/social.html
+++ b/social.html
@@ -6,7 +6,7 @@
         <section class="social-main">
             <div class="social-main-container">
                 <div class="social-main-container-display">
-                    <h2>Follow Optoma On</h2>
+                    <h2>Follow Optoma</h2>
                 </div>
                 <div class="social-main-container-tab" id="social-link">
                     <!-- <div class="social-main-container-tab-navbar">
