--- a/applications.html
+++ b/applications.html
@@ -46,8 +46,7 @@
                 <h3>Home</h3>
                 <p>Optoma offers a full line of home theater projectors for the stunning 2D and 3D viewing of your favorite movies and sports in the comfort of your home.
                     <br/>Optoma fits your home theater plans—and your budget. 
-                    <br/>Engineered for discerning viewers, Optoma’s premium home cinema projectors set a new standard for user-friendliness, 
-                    <br/>best-in-class image quality, color accuracy, with flexible options for installation and connection with your smart home ecosystem.</p>
+                    <br/>Engineered for discerning viewers, Optoma’s premium home cinema projectors set a new standard for user-friendliness, best-in-class image quality, color accuracy, with flexible options for installation and connection with your smart home ecosystem.</p>
             </div>
             <div class="applications-container-sec-row">
                 <div class="applications-container-sec-row-col">
