--- a/home.html
+++ b/home.html
@@ -19,7 +19,11 @@
                     </h3>
                     <div class="home-sec2-container-display-button">
                         <button><a href="./index.php?page=about" title="go to about optoma page">Find Out More</a></button>
-                        <img src="./images/home/sec2-logo.png" alt="logo">
+                        <div class="home-sec2-container-display-button-logo">
+                            <img src="./images/home/sec2-logo-1.jpg" alt="logo">
+                            <img src="./images/home/sec2-logo-2.jpg" alt="logo">
+                            <img src="./images/home/sec2-logo-3.jpg" alt="logo">    
+                        </div>
                     </div>
                 </div>
             </div>
