--- a/home.html
+++ b/home.html
@@ -15,15 +15,15 @@
                 <div class="home-sec2-container-display">
                     <h2>About Optoma</h2>
                     <h3>
-                        We deliver engagaging visual and audio experiences for a connected world.
+                        We deliver engaging visual and audio experiences for a connected world.
                     </h3>
                     <div class="home-sec2-container-display-button">
                         <button><a href="./index.php?page=about" title="go to about optoma page">Find Out More</a></button>
-                        <div class="home-sec2-container-display-button-logo">
-                            <img src="./images/home/sec2-logo-1.jpg" alt="logo">
-                            <img src="./images/home/sec2-logo-2.jpg" alt="logo">
-                            <img src="./images/home/sec2-logo-3.jpg" alt="logo">    
-                        </div>
+                    </div>
+                    <div class="home-sec2-container-display-logo">
+                        <img src="./images/home/sec2-logo-1.svg" alt="logo">
+                        <img src="./images/home/sec2-logo-2.jpg" alt="logo">
+                        <img src="./images/home/sec2-logo-3.svg" alt="logo">    
                     </div>
                 </div>
             </div>
@@ -77,7 +77,7 @@
             <div class="home-sec6-container">
                 <div class="home-sec6-container-display">
                     <h2>Knowledge Center</h2>
-                    <h3>The cool facts about large display and audio.</h3>
+                    <h3>The cool facts about large display.</h3>
                     <button><a href="./index.php?page=knowledge ">Find Out More</a></button>
                 </div>
             </div>
