--- a/about.html
+++ b/about.html
@@ -12,11 +12,11 @@
                         <div class="about-sec2-container-display-row-text">
                             <div class="about-sec2-container-display-row-text-heading">
                                 <h3>Vision</h3>
-                                <p>To deliver engaging visual and audio experiences for a connected world.</p>
+                                <p>To deliver engaging visual experiences for a connected world.</p>
                             </div>
                             <div class="about-sec2-container-display-row-text-heading">
                                 <h3>Mission</h3>
-                                <p>To be the trusted provider of reliable and innovative audio and visual solutions for customers and partners worldwide.</p>
+                                <p>To be the trusted provider of reliable and innovative visual solutions for customers and partners worldwide.</p>
                             </div>
                         </div>
                         <div class="about-sec2-container-display-row-figure">
