--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
-        <section class="home-sec1">
-            <div class="home-sec1-bgUpper" style="background-image: url(./images/home/star-1.jpg)"></div>
-            <div class="home-sec1-bgLower" style="background-image: url(./images/home/star-2.jpg)"></div>
+        <section class="home-sec1" style="background-image: url(./images/home/star-1.jpg)">
+            <div class="home-sec1-star-1" style="background-image: url(./images/home/star-2.jpg)"></div>
+            <div class="home-sec1-star-2" style="background-image: url(./images/home/star-3.jpg)"></div>
             <div class="home-sec1-bg" style="background-image: url(./images/home/star-1.jpg)"></div>
             <div class="home-sec1-container">
                 <div class="home-sec1-container-display">
