--- a/design.html
+++ b/design.html
@@ -12,7 +12,7 @@
 </section>
 <section class="design-sec2">
     <div class="design-sec2-container">
-        <h2>Design Philosophies</h2>
+        <h2>Design Philosophy</h2>
         <h3>
             Cool to the touch, but resonates warmth.
         </h3>
