--- a/footer.html
+++ b/footer.html
@@ -45,7 +45,7 @@
             </div>
             <div class="footer-container-line"></div>
             <div class="footer-container-copyright">
-                Copyright © 2019 Optoma Corporation.<br class="footer-container-copyright-br"> All rights reserved. <a href="https://www.optoma.com/us/terms-of-use/"><u>Terms and Conditions of Use</u></a>
+                Copyright © 2019 Optoma Corporation.<br class="footer-container-copyright-br"> All rights reserved. <a href="https://www.optoma.com/terms-conditions/"><u>Terms and Conditions of Use</u></a>
             </div>
         </div>
     </footer>
