--- a/knowledge.html
+++ b/knowledge.html
@@ -9,7 +9,7 @@
     <div class="knowledge-sec2-container">
         <h2>Welcome to the Optoma Knowledge Center</h2>
         <h3>
-            Here you will find the latest new trends in the audio and visual world, with access to articles, videos,
+            Here you will find the latest new trends in the visual world, with access to articles, videos,
             white papers and more.
         </h3>
         <div class="knowledge-sec2-container-video">
