--- a/home.html
+++ b/home.html
@@ -1,4 +1,5 @@
-        <section class="home-sec1" style="background-image: url(./images/home/star-1.jpg)">
+        <section class="home-sec1">
+            <div class="home-sec1-bg" style="background-image: url(./images/home/star-1.jpg)"></div>
             <div class="home-sec1-star-1" style="background-image: url(./images/home/star-2.jpg)"></div>
             <div class="home-sec1-star-2" style="background-image: url(./images/home/star-3.jpg)"></div>
             <div class="home-sec1-bg" style="background-image: url(./images/home/star-1.jpg)"></div>
@@ -15,15 +16,15 @@
                 <div class="home-sec2-container-display">
                     <h2>About Optoma</h2>
                     <h3>
-                        We deliver engaging visual and audio experiences for a connected world.
+                        We deliver engaging visual experiences for a connected world.
                     </h3>
                     <div class="home-sec2-container-display-button">
                         <button><a href="./index.php?page=about" title="go to about optoma page">Find Out More</a></button>
                     </div>
                     <div class="home-sec2-container-display-logo">
-                        <img src="./images/home/sec2-logo-1.svg" alt="logo">
+                        <img src="./images/home/sec2-logo-1.jpg" alt="logo">
                         <img src="./images/home/sec2-logo-2.jpg" alt="logo">
-                        <img src="./images/home/sec2-logo-3.svg" alt="logo">    
+                        <img src="./images/home/sec2-logo-3.jpg" alt="logo">    
                     </div>
                 </div>
             </div>
@@ -77,7 +78,7 @@
             <div class="home-sec6-container">
                 <div class="home-sec6-container-display">
                     <h2>Knowledge Center</h2>
-                    <h3>The cool facts about large display.</h3>
+                    <h3>The cool facts about large displays.</h3>
                     <button><a href="./index.php?page=knowledge ">Find Out More</a></button>
                 </div>
             </div>
